fix(CharacterCard): style status

--- a/rick-and-morty-app/src/components/CharacterCard/styles.scss
+++ b/rick-and-morty-app/src/components/CharacterCard/styles.scss
@@ -50,6 +50,10 @@
         &.dead{
           background: red;
         }
+
+        &.unknown{
+          background: gray;
+        }
       }
     }
 
