feat(Header): add link to home in logo

--- a/rick-and-morty-app/src/components/Header/styles.scss
+++ b/rick-and-morty-app/src/components/Header/styles.scss
@@ -8,6 +8,10 @@ header{
 
   border-bottom: 1px solid #e5e5e5;
 
+  a{
+    text-decoration: none;
+  }
+
   .logo{
     display: flex;
     align-items: center;
