--- a/rick-and-morty-app/src/pages/Home/styles.scss
+++ b/rick-and-morty-app/src/pages/Home/styles.scss
@@ -5,20 +5,26 @@
   margin: 0 auto;
   padding: 16px;
 
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 24px;
+  .filter{
+    margin-bottom: 48px;
+  }
+
+  .characters-list{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 24px;
+  }
 }
 
 @media(max-width: 1000px){
-  .container{
+  .characters-list{
     grid-template-columns: 1fr 1fr;
   }
 }
 
 
 @media(max-width: 680px){
-  .container{
+  .characters-list{
     grid-template-columns: 1fr;
   }
 }
