fix(Character): styles per status

--- a/rick-and-morty-app/src/pages/Character/styles.scss
+++ b/rick-and-morty-app/src/pages/Character/styles.scss
@@ -82,6 +82,10 @@
           &.dead{
             background: red;
           }
+
+          &.unknown{
+            background: gray;
+          }
         }
       }
 
